Add lab4 background-subtraction (frame precedente e media finestra mobile)

--- a/lab4/frame-precedente/CMakeLists.txt
+++ b/lab4/frame-precedente/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 2.8)
-project(frame-precedente)
+project(background-subtraction)
 
 find_package(OpenCV REQUIRED)
 
 add_definitions("-std=c++11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
-add_executable(frame-precedente
-frame-precedente.cpp
+add_executable(background-subtraction
+background-subtraction.cpp
 )
 
-target_link_libraries(frame-precedente
+target_link_libraries(background-subtraction
 ${OpenCV_LIBS}
 )
 
-install(TARGETS frame-precedente RUNTIME DESTINATION bin)
+install(TARGETS background-subtraction RUNTIME DESTINATION bin)
