--- a/A1/CMakeLists.txt
+++ b/A1/CMakeLists.txt
@@ -8,7 +8,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
 add_executable(A1_313336 A1_313336.cpp)
 
-target_link_libraries(A1_313336 ${OpenCV_LIBS}
-)
+target_link_libraries(A1_313336 ${OpenCV_LIBS})
 
 install(TARGETS A1_313336 RUNTIME DESTINATION bin)
