Fix bug on random indexes

--- a/A2/.vscode/settings.json
+++ b/A2/.vscode/settings.json
@@ -52,7 +52,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "thread": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "set": "cpp"
     },
     "cmake.configureOnOpen": true
 }
