Add floodfill labeling

--- a/tests/floodfill/CMakeLists.txt
+++ b/tests/floodfill/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 2.8)
-project(simple2)
+project(floodfill)
 
 find_package(OpenCV REQUIRED)
 
 add_definitions("-std=c++11")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 
-add_executable(simple2 simple2.cpp)
+add_executable(floodfill floodfill.cpp)
 
-target_link_libraries(simple2 ${OpenCV_LIBS})
+target_link_libraries(floodfill ${OpenCV_LIBS})
 
-install(TARGETS simple2 RUNTIME DESTINATION bin)
+install(TARGETS floodfill RUNTIME DESTINATION bin)
