--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "iostream": "cpp"
+        "array": "cpp",
+        "string_view": "cpp",
+        "complex": "cpp",
+        "fstream": "cpp"
     }
 }
