--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
     "files.associations": {
-        "array": "cpp",
-        "string_view": "cpp",
-        "complex": "cpp",
-        "fstream": "cpp"
+        "cmath": "cpp"
     }
 }
